@@ -2,6 +2,7 @@ Changes in Version 0.2.2 (2019-xx-xx)
 =====================================
 pycdf
  - VarCopy objects now carry information to help reproduce original
+ - Newly-public method nelems to get number of elements in zVar
 
 Changes in Version 0.2.1 (2019-10-02)
 =====================================
